tests/agl/rejections/type/pat_non_bare_in_named_only.agl
enum Pair
  | P(*, a: int, b: int)
let p: Pair = P(a = 1, b = 2)
case p of
  | P(3, b) => print "three"
  | _ => print "other"
